# cpp_calculator

./: CMakeLists.txt  calc.cpp  calc.h  calculator.h  main.cpp  mainTest.cpp  pocketcalculator.cpp  pocketcalculator.h  sevensegment.cpp  sevensegment.h
calculator/: calc.cpp  calculator.cpp  calculator.h
pocketcalculator/: pocketcalculator.cpp  pocketcalculator.h
printout/: number.h  printout.cpp  printout.h  sevensegment.h
test/: calculatorTest.cpp  printoutTest.cpp
